# jm-forge

./: .gitignore  AGENTS.md  README.md  TASK-REGISTRY.md  pyproject.toml
.agents/skills/: jm-forge:abandon  jm-forge:auto  jm-forge:discuss  jm-forge:init  jm-forge:plan  jm-forge:resource  skill-scaffold  workflow-execute
.gemini/skills/: jm-forge-abandon  jm-forge-auto  jm-forge-bootstrap  jm-forge-discuss  jm-forge-execute  jm-forge-init  jm-forge-list  jm-forge-new  jm-forge-plan  jm-forge-resource  jm-forge-status  jm-forge-sync  jm-forge:bootstrap  jm-forge:execute  jm-forge:list  jm-forge:new  jm-forge:status  jm-forge:sync
.planning/: TASK-REGISTRY.md  skill-naming-convention.md  workflow-framework.md
.planning/agent-install-scripts/: discuss-log.md  execute.md
.planning/bootstrap-iteration-optimization/: plan.md
.planning/codex-project-skill/: discuss-log.md  discuss.md
.planning/doc-relationship-graph/: discuss-log.md  discuss.md  execute.md  plan.md
.planning/exp-system/: execute.md
.planning/external-resources-support/: discuss-log.md  execute.md
.planning/gemini-installation-test-neimenggu/: discuss-log.md  discuss.md  execute.md  plan.md
.planning/gemini-project-skill/: discuss-log.md  plan.md
.planning/jm-forge-bootstrap/: discuss.md
.planning/jm-forge-init-refresh/: discuss.md  (+3 more)
.workspace/: INDEX.md
PROJECT-MAP/: SUMMARY.md  assets.json  domains.json  entries.json  project.json  relationships.json  schema-reference.md
RESOURCE-MAP/: resources.json
scripts/: install-workspaces-skills.py  pyproject.toml
skills/: manifest.json
(+194 files in other folders)
