[project]
name = "jm-forge-install"
version = "0.1.0"
description = "jm-forge Workspace Skills Installer"
requires-python = ">=3.10"
dependencies = ["questionary>=1.10.0"]

[project.scripts]
install-workspaces-skills = "install_workspaces_skills:main"

[tool.uvx]
dependencies = ["questionary>=1.10.0"]
